--- a/html and css project/TRIBUTE PAGE/index.html
+++ b/html and css project/TRIBUTE PAGE/index.html
@@ -12,7 +12,9 @@
         <p>1955-2011</p>
     </header>
     <article class="Biography">
-        <img class ="biopic" src="https://media.licdn.com/dms/image/D4D12AQGtxDjfhOINUQ/article-cover_image-shrink_600_2000/0/1704128712248?e=2147483647&v=beta&t=5DJjJTwz1IlFVga3ZhoAU4t3FPjzMJPOBtxlxQjcuks" alt="steve jobs">
+        <section class ="biopic-container">
+        <img id ="biopic" src="https://media.licdn.com/dms/image/D4D12AQGtxDjfhOINUQ/article-cover_image-shrink_600_2000/0/1704128712248?e=2147483647&v=beta&t=5DJjJTwz1IlFVga3ZhoAU4t3FPjzMJPOBtxlxQjcuks" alt="steve jobs">
+        </section>
 
         <section class="content">
             <h2>Biography</h2>
