--- a/html and css project/TRIBUTE PAGE/index.html
+++ b/html and css project/TRIBUTE PAGE/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQRgSxJ17X9cgpazBFNyWL82XCTVxtlwF_JYA&s">
     <title>TRIBUTE</title>
 </head>
 <body>
