--- a/html and css project/FORM PAGE/index.html
+++ b/html and css project/FORM PAGE/index.html
@@ -10,7 +10,26 @@
             <div class="icon">
                 <h2 class="logo">WiseLand</h2>
             </div>
+
+            <div class="menu">
+                <ul>
+                    <li><a href="#">HOME</a></li>
+                    <li><a href="#">ABOUT</a></li>
+                    <li><a href="#">SERVICE</a></li>
+                    <li><a href="#">DESIGN</a></li>
+                    <li><a href="#">CONTACT</a></li>
+                </ul>
+            </div>
+
+            <div class="search-container">
+                <input class="search" type="search" name="" placeholder="Type To Text">
+                <a href="#"><button class="btn">search</button></a>
+            </div>
         </nav>
+
+        <section>
+            
+        </section>
     </main>
 </body>
 </html>
