--- a/html and css project/FORM PAGE/index.html
+++ b/html and css project/FORM PAGE/index.html
@@ -27,9 +27,14 @@
             </div>
         </nav>
 
-        <section>
-            
+        <section class="content">
+            <h1>Web Design & <span>Development</span><br>Course</h1>
+            <p>
+                Master the essentials of web development, from HTML, CSS, and JavaScript to backend technologies. Build real projects and become job-ready with hands-on experience.
+            </p>
+            <button class="cn"><a href="#">Join Us</a></button>
         </section>
+
     </main>
 </body>
 </html>
