--- a/html and css project/FORM PAGE/index.html
+++ b/html and css project/FORM PAGE/index.html
@@ -49,7 +49,7 @@
 
             <button class="btn1" type="submit">Login</button>
 
-            <p>Don't have an account? <a class="link" href="#"><br>Sign up</a> here</p>
+            <p>Don't have an account?? <a class="link" href="#"><br>Sign up</a> here</p>
 
             <footer>
                 <p>Log in with</p>
