--- a/html and css project/portfolio/index.html
+++ b/html and css project/portfolio/index.html
@@ -48,6 +48,56 @@
 
     </section>
 
+    <section class="education" id="education">
+        <h2 class="heading">Education</h2>
+
+        <div class="timeline-items">
+
+            <div class="timeline-item">
+                <div class="timeline-date">2021</div>
+                <div class="timeline-content">
+                    <h3>High School</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque itaque error commodi, ex molestias velit vel ea ad iste facilis vero eum quidem voluptatem, sint mollitia sequi debitis perspiciatis magni!
+                    </p>
+                </div>
+            </div>
+
+            <div class="timeline-item">
+                <div class="timeline-date">2022</div>
+                <div class="timeline-content">
+                    <h3>University</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque itaque error commodi, ex molestias velit vel ea ad iste facilis vero eum quidem voluptatem, sint mollitia sequi debitis perspiciatis magni!
+                    </p>
+                </div>
+            </div>
+
+            <div class="timeline-item">
+                <div class="timeline-date">2023</div>
+                <div class="timeline-content">
+                    <h3>Internship</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque itaque error commodi, ex molestias velit vel ea ad iste facilis vero eum quidem voluptatem, sint mollitia sequi debitis perspiciatis magni!
+                    </p>
+                </div>
+            </div>
+
+            <div class="timeline-item">
+                <div class="timeline-date">2024</div>
+                <div class="timeline-content">
+                    <h3>Job</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque itaque error commodi, ex molestias velit vel ea ad iste facilis vero eum quidem voluptatem, sint mollitia sequi debitis perspiciatis magni!
+                    </p>
+                </div>
+            </div>
+
+        </div>
+
+    </section>
+
+
     <script src="script.js"></script>
 </body>
 </html>
