--- a/html and css project/portfolio/index.html
+++ b/html and css project/portfolio/index.html
@@ -15,11 +15,11 @@
         <i class='bx bx-menu' id="menu-icon"></i>
 
         <nav class="navbar">
-            <a href="#Home" class="active">Home</a>
-            <a href="#Education">Education</a>
-            <a href="#Services">Services</a>
-            <a href="#Testimonials">Testimonials</a>
-            <a href="#Contact">Contact</a>
+            <a href="#home" class="active">Home</a>
+            <a href="#education">Education</a>
+            <a href="#services">Services</a>
+            <a href="#testimonials">Testimonials</a>
+            <a href="#contact">Contact</a>
         </nav>
     </header>
 
@@ -99,6 +99,94 @@
 
         </div>
 
+    </section>
+
+    <section class="services" id="services">
+        <h2 class="heading">Services</h2>
+
+        <div class="services-container">
+
+            <div class="service-box">
+                <div class="service-info">
+                    <h4>UI Design</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum quasi vitae alias, nesciunt consectetur quidem, dicta ratione dignissimos vero ipsam quo? Non magnam culpa in consequuntur. Ab modi sed dignissimos?
+                    </p>
+                </div>
+            </div>
+
+            <div class="service-box">
+                <div class="service-info">
+                    <h4>Frontend Developer</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum quasi vitae alias, nesciunt consectetur quidem, dicta ratione dignissimos vero ipsam quo? Non magnam culpa in consequuntur. Ab modi sed dignissimos?
+                    </p>
+                </div>
+            </div>
+
+            <div class="service-box">
+                <div class="service-info">
+                    <h4>Backend Developer</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum quasi vitae alias, nesciunt consectetur quidem, dicta ratione dignissimos vero ipsam quo? Non magnam culpa in consequuntur. Ab modi sed dignissimos?
+                    </p>
+                </div>
+            </div>
+
+            <div class="service-box">
+                <div class="service-info">
+                    <h4>Testing</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum quasi vitae alias, nesciunt consectetur quidem, dicta ratione dignissimos vero ipsam quo? Non magnam culpa in consequuntur. Ab modi sed dignissimos?
+                    </p>
+                </div>
+            </div>
+
+        </div>
+
+    </section>
+
+    <section class="testimonials" id="testimonials">
+        <div class="testimonials-box">
+            <h2 class="heading">Testimonials</h2>
+
+            <div class="wrapper">
+                <div class="testimonial-item">
+                    <img src="https://i.pinimg.com/564x/a9/73/ba/a973ba74e129502a636428a1e4cf0967.jpg" alt="">
+                    <h2>marilyn</h2>
+                    <div class="rating">
+
+                    </div>
+                    <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quaerat eos quis incidunt quae! Id nobis laborum, eaque, labore eum facere voluptate quibusdam quae culpa neque impedit nemo ipsa repellendus deleniti.
+                    </p>
+                </div>
+
+                <div class="testimonial-item">
+                    <img src="https://i.pinimg.com/564x/ba/e6/18/bae618d7a62f3730b97bab961e12abf5.jpg" alt="">
+                    <h2>marilyn</h2>
+                    <div class="rating">
+
+                    </div>
+                    <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quaerat eos quis incidunt quae! Id nobis laborum, eaque, labore eum facere voluptate quibusdam quae culpa neque impedit nemo ipsa repellendus deleniti.
+                    </p>
+                </div>
+
+                <div class="testimonial-item">
+                    <img src="https://i.pinimg.com/564x/a8/e4/0a/a8e40a73c60ba20df6e009ecda59bdef.jpg" alt="">
+                    <h2>marilyn</h2>
+                    <div class="rating">
+
+                    </div>
+                    <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quaerat eos quis incidunt quae! Id nobis laborum, eaque, labore eum facere voluptate quibusdam quae culpa neque impedit nemo ipsa repellendus deleniti.
+                    </p>
+                </div>
+
+            </div>
+
+        </div>
     </section>
 
 
