--- a/html and css project/portfolio/index.html
+++ b/html and css project/portfolio/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header class="header">
-        <a href="#home" class="logo">Sri <span>Vikas</span></a>
+        <a href="#home" class="logo">Amelia <span>Morgan</span></a>
 
         <i class='bx bx-menu' id="menu-icon"></i>
 
@@ -25,7 +25,7 @@
 
     <section class="home" id="home">
         <div class="home-content">
-            <h1>Hi,It's <span>Sri</span></h1>
+            <h1>Hi,It's <span>Amelia</span></h1>
             <h3 class="text-animation">i'm a <span></span></h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis ducimus fugiat perspiciatis ab. Accusamus ad illum, praesentium impedit explicabo sequi maxime enim odio natus sapiente, tenetur, repellat optio corrupti ea!</p>
 
@@ -152,10 +152,14 @@
 
             <div class="wrapper">
                 <div class="testimonial-item">
-                    <img src="https://i.pinimg.com/564x/a9/73/ba/a973ba74e129502a636428a1e4cf0967.jpg" alt="">
+                    <img src="./1.jpg" alt="">
                     <h2>marilyn</h2>
                     <div class="rating">
-
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
                     </div>
                     <p>
                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quaerat eos quis incidunt quae! Id nobis laborum, eaque, labore eum facere voluptate quibusdam quae culpa neque impedit nemo ipsa repellendus deleniti.
@@ -163,10 +167,14 @@
                 </div>
 
                 <div class="testimonial-item">
-                    <img src="https://i.pinimg.com/564x/ba/e6/18/bae618d7a62f3730b97bab961e12abf5.jpg" alt="">
-                    <h2>marilyn</h2>
+                    <img src="./2.jpg" alt="">
+                    <h2>jane</h2>
                     <div class="rating">
-
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
                     </div>
                     <p>
                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quaerat eos quis incidunt quae! Id nobis laborum, eaque, labore eum facere voluptate quibusdam quae culpa neque impedit nemo ipsa repellendus deleniti.
@@ -174,10 +182,14 @@
                 </div>
 
                 <div class="testimonial-item">
-                    <img src="https://i.pinimg.com/564x/a8/e4/0a/a8e40a73c60ba20df6e009ecda59bdef.jpg" alt="">
-                    <h2>marilyn</h2>
+                    <img src="./3.jpg" alt="">
+                    <h2>scarlett</h2>
                     <div class="rating">
-
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
                     </div>
                     <p>
                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quaerat eos quis incidunt quae! Id nobis laborum, eaque, labore eum facere voluptate quibusdam quae culpa neque impedit nemo ipsa repellendus deleniti.
@@ -188,6 +200,73 @@
 
         </div>
     </section>
+
+    <section class="contact" id="contact">
+        <h2 class="heading">Contact <span>Me</span></h2>
+
+        <form action="">
+            <div class="input-group">
+
+                <div class="input-box">
+                    <input type="text" placeholder="Name" required>
+                    <input type="email" placeholder="Email"> 
+                </div>
+
+                <div class="input-box">
+                    <input type="number" placeholder="Number" required>
+                    <input type="text" placeholder="Subject"> 
+                </div>
+
+            </div>
+
+            <div class="input-group-2">
+                <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
+                <input type="submit" value="Send Message" class="btn">
+            </div>
+
+        </form>
+
+    </section>
+
+    <footer class="footer">
+
+        <div class="social">
+            <a href="#"><i class='bx bxl-linkedin' ></i></a>
+            <a href="#"><i class='bx bxl-github' ></i></a>
+            <a href="#"><i class='bx bxl-instagram' ></i></a>
+            <a href="#"><i class='bx bxl-twitter'></i></a>
+        </div>
+
+        <ul class="list">
+
+            <li>
+                <a href="#">FAQ</a>
+            </li>
+
+            <li>
+                <a href="#">Services</a>
+            </li>
+
+            <li>
+                <a href="#">About Me</a>
+            </li>
+
+            <li>
+                <a href="#">Contact</a>
+            </li>
+
+            <li>
+                <a href="#">Testimonials</a>
+            </li>
+
+        </ul>
+
+        <p class="copyright">
+            <i class='bx bx-copyright'></i>
+            Amelia Morgan | All Rights Reserved.
+        </p>
+
+    </footer>
 
 
     <script src="script.js"></script>
