--- a/html and css project/portfolio/index.html
+++ b/html and css project/portfolio/index.html
@@ -32,7 +32,7 @@
             <div class="social-icons">
                 <a href="#"><i class='bx bxl-linkedin' ></i></a>
                 <a href="#"><i class='bx bxl-github' ></i></a>
-                <a href="#"><i class='bx bxl-instagram' ></i></a>
+                <a href="#"><i class='bx bxl-instagram-alt' ></i></a>
                 <a href="#"><i class='bx bxl-twitter'></i></a>
             </div>
 
@@ -233,7 +233,7 @@
         <div class="social">
             <a href="#"><i class='bx bxl-linkedin' ></i></a>
             <a href="#"><i class='bx bxl-github' ></i></a>
-            <a href="#"><i class='bx bxl-instagram' ></i></a>
+            <a href="#"><i class='bx bxl-instagram-alt' ></i></a>
             <a href="#"><i class='bx bxl-twitter'></i></a>
         </div>
 
