--- a/html and css project/portfolio/index.html
+++ b/html and css project/portfolio/index.html
@@ -119,7 +119,7 @@
                 <div class="service-info">
                     <h4>Frontend Developer</h4>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum quasi vitae alias, nesciunt consectetur quidem, dicta ratione dignissimos vero ipsam quo? Non magnam culpa in consequuntur. Ab modi sed dignissimos?
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum quasi vitae alias, nesciunt consectetur quidem, dicta ratione dignissimos vero ipsam quo? Non magnam culpa in consequuntur.
                     </p>
                 </div>
             </div>
@@ -128,7 +128,7 @@
                 <div class="service-info">
                     <h4>Backend Developer</h4>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum quasi vitae alias, nesciunt consectetur quidem, dicta ratione dignissimos vero ipsam quo? Non magnam culpa in consequuntur. Ab modi sed dignissimos?
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum quasi vitae alias, nesciunt consectetur quidem, dicta ratione dignissimos vero ipsam quo? Non magnam culpa in consequuntur.
                     </p>
                 </div>
             </div>
