--- a/js project/quiz/index.html
+++ b/js project/quiz/index.html
@@ -23,8 +23,29 @@
 
         <div class="container">
 
-            <section class="quiz-selection">
-                
+            <section class="quiz-section">
+                <div class="quiz-box">
+                    <h1>BrainBlitz Quiz</h1>
+                    <div class="quiz-header">
+                        <span>Quiz Website</span>
+                        <span class="header-score">Score: <span id="score">0</span> / 5</span>
+                    </div>
+
+                    <h2 class="question-text">What does HTML stand for?</h2>
+
+                    <div class="options">
+                        <button class="option-btn" data-correct="false">A) Hyperlinks and Text Markup Language</button>
+                        <button class="option-btn" data-correct="true">B) Hyper Text Markup Language</button>
+                        <button class="option-btn" data-correct="false">C) Home Tool Markup Language</button>
+                        <button class="option-btn" data-correct="false">D) Hyper Text Markdown Language</button>
+                    </div>
+
+                    <div class="quiz-footer">
+                        <span class="question-total"><span id="qus-no">0</span> of 5 questions</span>
+                        <button class="next-btn">Next</button>
+                    </div>
+
+                </div>
             </section>
 
             <section class="home">
@@ -53,7 +74,7 @@
 
     </div>
 
-    <script src="./questions.js"></script>r
+    <script src="./questions.js"></script>
     <script src="./script.js"></script>
 
 </body>
