--- a/js project/quiz/index.html
+++ b/js project/quiz/index.html
@@ -23,12 +23,12 @@
 
         <div class="container">
 
-            <section class="quiz-section" id="quiz-section">
+            <section class="quiz-section">
                 <div class="quiz-box">
                     <h1>BrainBlitz Quiz</h1>
                     <div class="quiz-header">
                         <span>Quiz Website</span>
-                        <span class="score">0 / x</span>
+                        <span class="score">Score: 0</span>
                     </div>
 
                     <div class="quiz-content">
@@ -51,7 +51,7 @@
 
                     <div class="quiz-footer">
                         <span class="qus-no"> 0 of X questions</span>
-                        <button class="next-btn" disabled>Next</button>
+                        <button class="next-btn" >Next</button>
                     </div>
 
                 </div>
