--- a/html and css project/youtube/index.html
+++ b/html and css project/youtube/index.html
@@ -5,8 +5,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YouTube</title>
     <link rel="stylesheet" href="index.css">
+    <script src="https://kit.fontawesome.com/7120bfd7fb.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    
+    <nav>
+        <div class="logo">
+            <i class="fa-solid fa-bars fa-sm" style="color: #000000;"></i>
+            <i class="fa-brands fa-youtube fa-2x1" style="color: #e92525;"></i>
+            <p class="text_logo">YouTube</p>
+        </div>
+        <input class="search_box" type="text" placeholder="Search">
+    </nav>
+
+    <main>
+        <div class="card">
+            <img class="thumbnail" src="https://supersimple.dev/exercises/youtube/thumbnails/thumbnail-1.webp" alt="v1">
+            <div class="inner_card">
+                <div class="pic_con">
+                    <img class="pic" src="https://supersimple.dev/exercises/youtube/channel-profile-pics/channel-1.jpeg" alt="channel logo">
+                </div>
+                <div class="text_card">
+                    <h4 class="title">Talking Tech and AI with Google CEO Sundar Pichai!</h4>
+                    <p class="name">Marques Brownlee</p>
+                    <p class="info">3.4M views . 6 months ago</p>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <img class="thumbnail" src="https://supersimple.dev/exercises/youtube/thumbnails/thumbnail-1.webp" alt="v1">
+            <div class="inner_card">
+                <div class="pic_con">
+                    <img class="pic" src="https://supersimple.dev/exercises/youtube/channel-profile-pics/channel-1.jpeg" alt="channel logo">
+                </div>
+                <div class="text_card">
+                    <h4 class="title">Talking Tech and AI with Google CEO Sundar Pichai!</h4>
+                    <p class="name">Marques Brownlee</p>
+                    <p class="info">3.4M views . 6 months ago</p>
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
