--- a/html and css project/youtube/index.html
+++ b/html and css project/youtube/index.html
@@ -6,6 +6,9 @@
     <title>YouTube</title>
     <link rel="stylesheet" href="index.css">
     <script src="https://kit.fontawesome.com/7120bfd7fb.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav>
@@ -18,6 +21,84 @@
     </nav>
 
     <main>
+        <div class="card">
+            <img class="thumbnail" src="https://supersimple.dev/exercises/youtube/thumbnails/thumbnail-1.webp" alt="v1">
+            <div class="inner_card">
+                <div class="pic_con">
+                    <img class="pic" src="https://supersimple.dev/exercises/youtube/channel-profile-pics/channel-1.jpeg" alt="channel logo">
+                </div>
+                <div class="text_card">
+                    <h4 class="title">Talking Tech and AI with Google CEO Sundar Pichai!</h4>
+                    <p class="name">Marques Brownlee</p>
+                    <p class="info">3.4M views . 6 months ago</p>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <img class="thumbnail" src="https://supersimple.dev/exercises/youtube/thumbnails/thumbnail-1.webp" alt="v1">
+            <div class="inner_card">
+                <div class="pic_con">
+                    <img class="pic" src="https://supersimple.dev/exercises/youtube/channel-profile-pics/channel-1.jpeg" alt="channel logo">
+                </div>
+                <div class="text_card">
+                    <h4 class="title">Talking Tech and AI with Google CEO Sundar Pichai!</h4>
+                    <p class="name">Marques Brownlee</p>
+                    <p class="info">3.4M views . 6 months ago</p>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <img class="thumbnail" src="https://supersimple.dev/exercises/youtube/thumbnails/thumbnail-1.webp" alt="v1">
+            <div class="inner_card">
+                <div class="pic_con">
+                    <img class="pic" src="https://supersimple.dev/exercises/youtube/channel-profile-pics/channel-1.jpeg" alt="channel logo">
+                </div>
+                <div class="text_card">
+                    <h4 class="title">Talking Tech and AI with Google CEO Sundar Pichai!</h4>
+                    <p class="name">Marques Brownlee</p>
+                    <p class="info">3.4M views . 6 months ago</p>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <img class="thumbnail" src="https://supersimple.dev/exercises/youtube/thumbnails/thumbnail-1.webp" alt="v1">
+            <div class="inner_card">
+                <div class="pic_con">
+                    <img class="pic" src="https://supersimple.dev/exercises/youtube/channel-profile-pics/channel-1.jpeg" alt="channel logo">
+                </div>
+                <div class="text_card">
+                    <h4 class="title">Talking Tech and AI with Google CEO Sundar Pichai!</h4>
+                    <p class="name">Marques Brownlee</p>
+                    <p class="info">3.4M views . 6 months ago</p>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <img class="thumbnail" src="https://supersimple.dev/exercises/youtube/thumbnails/thumbnail-1.webp" alt="v1">
+            <div class="inner_card">
+                <div class="pic_con">
+                    <img class="pic" src="https://supersimple.dev/exercises/youtube/channel-profile-pics/channel-1.jpeg" alt="channel logo">
+                </div>
+                <div class="text_card">
+                    <h4 class="title">Talking Tech and AI with Google CEO Sundar Pichai!</h4>
+                    <p class="name">Marques Brownlee</p>
+                    <p class="info">3.4M views . 6 months ago</p>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <img class="thumbnail" src="https://supersimple.dev/exercises/youtube/thumbnails/thumbnail-1.webp" alt="v1">
+            <div class="inner_card">
+                <div class="pic_con">
+                    <img class="pic" src="https://supersimple.dev/exercises/youtube/channel-profile-pics/channel-1.jpeg" alt="channel logo">
+                </div>
+                <div class="text_card">
+                    <h4 class="title">Talking Tech and AI with Google CEO Sundar Pichai!</h4>
+                    <p class="name">Marques Brownlee</p>
+                    <p class="info">3.4M views . 6 months ago</p>
+                </div>
+            </div>
+        </div>
         <div class="card">
             <img class="thumbnail" src="https://supersimple.dev/exercises/youtube/thumbnails/thumbnail-1.webp" alt="v1">
             <div class="inner_card">
