--- a/html and css project/youtube/index.html
+++ b/html and css project/youtube/index.html
@@ -12,12 +12,25 @@
 </head>
 <body>
     <nav>
-        <div class="logo">
-            <i class="fa-solid fa-bars fa-sm" style="color: #000000;"></i>
-            <i class="fa-brands fa-youtube fa-2x1" style="color: #e92525;"></i>
-            <p class="text_logo">YouTube</p>
+        <div class="logo_con">
+            <img class="menu" src="https://supersimple.dev/exercises/youtube/icons/hamburger-menu.svg" alt="menu">
+            <img class="logo" src="https://supersimple.dev/exercises/youtube/icons/youtube-logo.svg" alt="logo">
         </div>
-        <input class="search_box" type="text" placeholder="Search">
+        <div class="input">
+            <input class="search_box" type="text" placeholder="Search">
+            <button class="len_btn">
+                <img class="len" src="https://supersimple.dev/exercises/youtube/icons/search.svg" alt="len">
+            </button>
+            <button class="mic_btn">
+                <img class="mic" src="https://supersimple.dev/exercises/youtube/icons/voice-search-icon.svg" alt="mic">
+            </button>
+        </div>
+        <div class="quick">
+            <img class="features" src="https://supersimple.dev/exercises/youtube/icons/upload.svg" alt="tools">
+            <img class="features" src="https://supersimple.dev/exercises/youtube/icons/youtube-apps.svg" alt="">
+            <img class="features" src="https://supersimple.dev/exercises/youtube/icons/notifications.svg" alt="">
+            <img class="features" src="https://supersimple.dev/exercises/youtube/channel-profile-pics/my-channel.jpeg" alt="">
+        </div>
     </nav>
 
     <main>
