--- a/html and css project/youtube/index.html
+++ b/html and css project/youtube/index.html
@@ -32,6 +32,9 @@
             <img class="features" src="https://supersimple.dev/exercises/youtube/channel-profile-pics/my-channel.jpeg" alt="">
         </div>
     </nav>
+    <aside>
+        s
+    </aside>
 
     <main>
         <div class="card">
