--- a/html and css project/youtube/index.html
+++ b/html and css project/youtube/index.html
@@ -27,18 +27,44 @@
         </div>
         <div class="quick">
             <img class="features" src="https://supersimple.dev/exercises/youtube/icons/upload.svg" alt="tools">
-            <img class="features" src="https://supersimple.dev/exercises/youtube/icons/youtube-apps.svg" alt="">
-            <img class="features" src="https://supersimple.dev/exercises/youtube/icons/notifications.svg" alt="">
-            <img class="features" src="https://supersimple.dev/exercises/youtube/channel-profile-pics/my-channel.jpeg" alt="">
+            <img class="features" src="https://supersimple.dev/exercises/youtube/icons/youtube-apps.svg" alt="t2">
+            <img class="features" src="https://supersimple.dev/exercises/youtube/icons/notifications.svg" alt="t3">
+            <img class="features" src="https://supersimple.dev/exercises/youtube/channel-profile-pics/my-channel.jpeg" alt="t4">
         </div>
     </nav>
     <aside>
-        s
-    </aside>
+        <div class="side_bar">
+            <img src="https://supersimple.dev/exercises/youtube/icons/home.svg" alt="s1">
+            <p>Home</p>
+        </div>
+        <div class="side_bar">
+            <img src="https://supersimple.dev/exercises/youtube/icons/explore.svg" alt="s2">
+            <p>Explore</p>
+        </div>
+        <div class="side_bar">
+            <img src="https://supersimple.dev/exercises/youtube/icons/subscriptions.svg" alt="s3">
+            <p>subscriptions</p>
+        </div>
+        <div class="side_bar">
+            <img src="https://supersimple.dev/exercises/youtube/icons/originals.svg" alt="s4">
+            <p>originals</p>
+        </div>
+        <div class="side_bar">
+            <img src="https://supersimple.dev/exercises/youtube/icons/youtube-music.svg" alt="s5">
+            <p>youtube_music</p>
+        </div>
+        <div class="side_bar">
+            <img src="https://supersimple.dev/exercises/youtube/icons/library.svg" alt="s6">
+            <p>library</p>
+        </aside>
+        </div>
 
     <main>
         <div class="card">
-            <img class="thumbnail" src="https://supersimple.dev/exercises/youtube/thumbnails/thumbnail-1.webp" alt="v1">
+            <div class="t_box">
+                <img class="thumbnail" src="https://supersimple.dev/exercises/youtube/thumbnails/thumbnail-1.webp" alt="v1">
+                <p class="time">15:00</p>
+            </div>
             <div class="inner_card">
                 <div class="pic_con">
                     <img class="pic" src="https://supersimple.dev/exercises/youtube/channel-profile-pics/channel-1.jpeg" alt="channel logo">
@@ -51,7 +77,10 @@
             </div>
         </div>
         <div class="card">
-            <img class="thumbnail" src="https://supersimple.dev/exercises/youtube/thumbnails/thumbnail-1.webp" alt="v1">
+            <div class="t_box">
+                <img class="thumbnail" src="https://supersimple.dev/exercises/youtube/thumbnails/thumbnail-1.webp" alt="v1">
+                <p class="time">15:00</p>
+            </div>
             <div class="inner_card">
                 <div class="pic_con">
                     <img class="pic" src="https://supersimple.dev/exercises/youtube/channel-profile-pics/channel-1.jpeg" alt="channel logo">
@@ -64,7 +93,10 @@
             </div>
         </div>
         <div class="card">
-            <img class="thumbnail" src="https://supersimple.dev/exercises/youtube/thumbnails/thumbnail-1.webp" alt="v1">
+            <div class="t_box">
+                <img class="thumbnail" src="https://supersimple.dev/exercises/youtube/thumbnails/thumbnail-1.webp" alt="v1">
+                <p class="time">15:00</p>
+            </div>
             <div class="inner_card">
                 <div class="pic_con">
                     <img class="pic" src="https://supersimple.dev/exercises/youtube/channel-profile-pics/channel-1.jpeg" alt="channel logo">
@@ -77,7 +109,10 @@
             </div>
         </div>
         <div class="card">
-            <img class="thumbnail" src="https://supersimple.dev/exercises/youtube/thumbnails/thumbnail-1.webp" alt="v1">
+            <div class="t_box">
+                <img class="thumbnail" src="https://supersimple.dev/exercises/youtube/thumbnails/thumbnail-1.webp" alt="v1">
+                <p class="time">15:00</p>
+            </div>
             <div class="inner_card">
                 <div class="pic_con">
                     <img class="pic" src="https://supersimple.dev/exercises/youtube/channel-profile-pics/channel-1.jpeg" alt="channel logo">
@@ -90,7 +125,10 @@
             </div>
         </div>
         <div class="card">
-            <img class="thumbnail" src="https://supersimple.dev/exercises/youtube/thumbnails/thumbnail-1.webp" alt="v1">
+            <div class="t_box">
+                <img class="thumbnail" src="https://supersimple.dev/exercises/youtube/thumbnails/thumbnail-1.webp" alt="v1">
+                <p class="time">15:00</p>
+            </div>
             <div class="inner_card">
                 <div class="pic_con">
                     <img class="pic" src="https://supersimple.dev/exercises/youtube/channel-profile-pics/channel-1.jpeg" alt="channel logo">
@@ -103,7 +141,10 @@
             </div>
         </div>
         <div class="card">
-            <img class="thumbnail" src="https://supersimple.dev/exercises/youtube/thumbnails/thumbnail-1.webp" alt="v1">
+            <div class="t_box">
+                <img class="thumbnail" src="https://supersimple.dev/exercises/youtube/thumbnails/thumbnail-1.webp" alt="v1">
+                <p class="time">15:00</p>
+            </div>
             <div class="inner_card">
                 <div class="pic_con">
                     <img class="pic" src="https://supersimple.dev/exercises/youtube/channel-profile-pics/channel-1.jpeg" alt="channel logo">
@@ -116,7 +157,10 @@
             </div>
         </div>
         <div class="card">
-            <img class="thumbnail" src="https://supersimple.dev/exercises/youtube/thumbnails/thumbnail-1.webp" alt="v1">
+            <div class="t_box">
+                <img class="thumbnail" src="https://supersimple.dev/exercises/youtube/thumbnails/thumbnail-1.webp" alt="v1">
+                <p class="time">15:00</p>
+            </div>
             <div class="inner_card">
                 <div class="pic_con">
                     <img class="pic" src="https://supersimple.dev/exercises/youtube/channel-profile-pics/channel-1.jpeg" alt="channel logo">
@@ -129,7 +173,26 @@
             </div>
         </div>
         <div class="card">
-            <img class="thumbnail" src="https://supersimple.dev/exercises/youtube/thumbnails/thumbnail-1.webp" alt="v1">
+            <div class="t_box">
+                <img class="thumbnail" src="https://supersimple.dev/exercises/youtube/thumbnails/thumbnail-1.webp" alt="v1">
+                <p class="time">15:00</p>
+            </div>
+            <div class="inner_card">
+                <div class="pic_con">
+                    <img class="pic" src="https://supersimple.dev/exercises/youtube/channel-profile-pics/channel-1.jpeg" alt="channel logo">
+                </div>
+                <div class="text_card">
+                    <h4 class="title">Talking Tech and AI with Google CEO Sundar Pichai!</h4>
+                    <p class="name">Marques Brownlee</p>
+                    <p class="info">3.4M views . 6 months ago</p>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="t_box">
+                <img class="thumbnail" src="https://supersimple.dev/exercises/youtube/thumbnails/thumbnail-1.webp" alt="v1">
+                <p class="time">15:00</p>
+            </div>
             <div class="inner_card">
                 <div class="pic_con">
                     <img class="pic" src="https://supersimple.dev/exercises/youtube/channel-profile-pics/channel-1.jpeg" alt="channel logo">
