--- a/html and css project/youtube/index.html
+++ b/html and css project/youtube/index.html
@@ -20,9 +20,11 @@
             <input class="search_box" type="text" placeholder="Search">
             <button class="len_btn">
                 <img class="len" src="https://supersimple.dev/exercises/youtube/icons/search.svg" alt="len">
+                <p class="tooltip">Search</p>
             </button>
             <button class="mic_btn">
                 <img class="mic" src="https://supersimple.dev/exercises/youtube/icons/voice-search-icon.svg" alt="mic">
+                <p class="tooltip">Voice Search</p>
             </button>
         </div>
         <div class="quick">
@@ -61,6 +63,7 @@
 
     <main>
         <div class="card">
+            <a href="https://www.youtube.com/watch?v=n2RNcPRtAiY">
             <div class="t_box">
                 <img class="thumbnail" src="https://supersimple.dev/exercises/youtube/thumbnails/thumbnail-1.webp" alt="v1">
                 <p class="time">15:00</p>
@@ -75,8 +78,10 @@
                     <p class="info">3.4M views . 6 months ago</p>
                 </div>
             </div>
+            </a>
         </div>
         <div class="card">
+            <a href="https://www.youtube.com/watch?v=n2RNcPRtAiY">
             <div class="t_box">
                 <img class="thumbnail" src="https://supersimple.dev/exercises/youtube/thumbnails/thumbnail-1.webp" alt="v1">
                 <p class="time">15:00</p>
@@ -91,8 +96,10 @@
                     <p class="info">3.4M views . 6 months ago</p>
                 </div>
             </div>
+            </a>
         </div>
         <div class="card">
+            <a href="https://www.youtube.com/watch?v=n2RNcPRtAiY">
             <div class="t_box">
                 <img class="thumbnail" src="https://supersimple.dev/exercises/youtube/thumbnails/thumbnail-1.webp" alt="v1">
                 <p class="time">15:00</p>
@@ -107,8 +114,10 @@
                     <p class="info">3.4M views . 6 months ago</p>
                 </div>
             </div>
+            </a>
         </div>
         <div class="card">
+            <a href="https://www.youtube.com/watch?v=n2RNcPRtAiY">
             <div class="t_box">
                 <img class="thumbnail" src="https://supersimple.dev/exercises/youtube/thumbnails/thumbnail-1.webp" alt="v1">
                 <p class="time">15:00</p>
@@ -123,8 +132,10 @@
                     <p class="info">3.4M views . 6 months ago</p>
                 </div>
             </div>
+            </a>
         </div>
         <div class="card">
+            <a href="https://www.youtube.com/watch?v=n2RNcPRtAiY">
             <div class="t_box">
                 <img class="thumbnail" src="https://supersimple.dev/exercises/youtube/thumbnails/thumbnail-1.webp" alt="v1">
                 <p class="time">15:00</p>
@@ -139,8 +150,10 @@
                     <p class="info">3.4M views . 6 months ago</p>
                 </div>
             </div>
+            </a>
         </div>
         <div class="card">
+            <a href="https://www.youtube.com/watch?v=n2RNcPRtAiY">
             <div class="t_box">
                 <img class="thumbnail" src="https://supersimple.dev/exercises/youtube/thumbnails/thumbnail-1.webp" alt="v1">
                 <p class="time">15:00</p>
@@ -155,8 +168,10 @@
                     <p class="info">3.4M views . 6 months ago</p>
                 </div>
             </div>
+            </a>
         </div>
         <div class="card">
+            <a href="https://www.youtube.com/watch?v=n2RNcPRtAiY">
             <div class="t_box">
                 <img class="thumbnail" src="https://supersimple.dev/exercises/youtube/thumbnails/thumbnail-1.webp" alt="v1">
                 <p class="time">15:00</p>
@@ -171,8 +186,10 @@
                     <p class="info">3.4M views . 6 months ago</p>
                 </div>
             </div>
+            </a>
         </div>
         <div class="card">
+            <a href="https://www.youtube.com/watch?v=n2RNcPRtAiY">
             <div class="t_box">
                 <img class="thumbnail" src="https://supersimple.dev/exercises/youtube/thumbnails/thumbnail-1.webp" alt="v1">
                 <p class="time">15:00</p>
@@ -187,8 +204,10 @@
                     <p class="info">3.4M views . 6 months ago</p>
                 </div>
             </div>
+            </a>
         </div>
         <div class="card">
+            <a href="https://www.youtube.com/watch?v=n2RNcPRtAiY">
             <div class="t_box">
                 <img class="thumbnail" src="https://supersimple.dev/exercises/youtube/thumbnails/thumbnail-1.webp" alt="v1">
                 <p class="time">15:00</p>
@@ -203,6 +222,61 @@
                     <p class="info">3.4M views . 6 months ago</p>
                 </div>
             </div>
+            </a>
+        </div>
+        <div class="card">
+            <a href="https://www.youtube.com/watch?v=n2RNcPRtAiY">
+            <div class="t_box">
+                <img class="thumbnail" src="https://supersimple.dev/exercises/youtube/thumbnails/thumbnail-1.webp" alt="v1">
+                <p class="time">15:00</p>
+            </div>
+            <div class="inner_card">
+                <div class="pic_con">
+                    <img class="pic" src="https://supersimple.dev/exercises/youtube/channel-profile-pics/channel-1.jpeg" alt="channel logo">
+                </div>
+                <div class="text_card">
+                    <h4 class="title">Talking Tech and AI with Google CEO Sundar Pichai!</h4>
+                    <p class="name">Marques Brownlee</p>
+                    <p class="info">3.4M views . 6 months ago</p>
+                </div>
+            </div>
+            </a>
+        </div>
+        <div class="card">
+            <a href="https://www.youtube.com/watch?v=n2RNcPRtAiY">
+            <div class="t_box">
+                <img class="thumbnail" src="https://supersimple.dev/exercises/youtube/thumbnails/thumbnail-1.webp" alt="v1">
+                <p class="time">15:00</p>
+            </div>
+            <div class="inner_card">
+                <div class="pic_con">
+                    <img class="pic" src="https://supersimple.dev/exercises/youtube/channel-profile-pics/channel-1.jpeg" alt="channel logo">
+                </div>
+                <div class="text_card">
+                    <h4 class="title">Talking Tech and AI with Google CEO Sundar Pichai!</h4>
+                    <p class="name">Marques Brownlee</p>
+                    <p class="info">3.4M views . 6 months ago</p>
+                </div>
+            </div>
+            </a>
+        </div>
+        <div class="card">
+            <a href="https://www.youtube.com/watch?v=n2RNcPRtAiY">
+            <div class="t_box">
+                <img class="thumbnail" src="https://supersimple.dev/exercises/youtube/thumbnails/thumbnail-1.webp" alt="v1">
+                <p class="time">15:00</p>
+            </div>
+            <div class="inner_card">
+                <div class="pic_con">
+                    <img class="pic" src="https://supersimple.dev/exercises/youtube/channel-profile-pics/channel-1.jpeg" alt="channel logo">
+                </div>
+                <div class="text_card">
+                    <h4 class="title">Talking Tech and AI with Google CEO Sundar Pichai!</h4>
+                    <p class="name">Marques Brownlee</p>
+                    <p class="info">3.4M views . 6 months ago</p>
+                </div>
+            </div>
+            </a>
         </div>
     </main>
 </body>
